force-app/main/default/objects/Itinerary_Booking_Supplier__c/Itinerary_Booking_Supplier__c.object-meta.xml
<CustomObject>
    <label>Itinerary Booking Supplier</label>
    <nameField>
        <displayFormat>IBS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itinerary Booking Supplier</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>