force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Bus_Based_Meal__c.field-meta.xml
<CustomField>
    <fullName>Bus_Based_Meal__c</fullName>
    <label>Bus Based Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>