force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Day_of_week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_week__c</fullName>
    <label>Day of week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>