force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Drop_Location__c.field-meta.xml
<CustomField>
    <fullName>Drop_Location__c</fullName>
    <formula>Transport__r.Drop_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop Location</label>
    <type>Text</type>
</CustomField>