force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/General_Logistics_Type__c.field-meta.xml
<CustomField>
    <fullName>General_Logistics_Type__c</fullName>
    <label>General Logistics Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>