force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meal</label>
    <referenceTo>Meal__c</referenceTo>
    <relationshipLabel>Itinerary Booking Supplier</relationshipLabel>
    <relationshipName>Itinerary_Booking_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>