force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Meal_Including_Today__c.field-meta.xml
<CustomField>
    <fullName>Meal_Including_Today__c</fullName>
    <label>Meal Including Today</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>