force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Miscellaneous_Meal_Items__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Meal_Items__c</fullName>
    <label>Miscellaneous Meal Items</label>
    <length>50</length>
    <type>Text</type>
</CustomField>