force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <formula>Transport__r.Start_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Location</label>
    <type>Text</type>
</CustomField>