force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Stops__c.field-meta.xml
<CustomField>
    <fullName>Stops__c</fullName>
    <label>Stops</label>
    <length>50</length>
    <type>Text</type>
</CustomField>