force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Tours</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>National Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>