force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Accommodation__r.Name + Meal__r.Name +  Transport__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>