force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Itinerary Booking Supplier</relationshipLabel>
    <relationshipName>Itinerary_Booking_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>