force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Trip_Name__c.field-meta.xml
<CustomField>
    <fullName>Trip_Name__c</fullName>
    <formula>Itinerary__r.Trip_Option__r.Trip__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Name</label>
    <type>Text</type>
</CustomField>