force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Trip_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Trip_Option_Name__c</fullName>
    <formula>Itinerary__r.Trip_Option__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Option Name</label>
    <type>Text</type>
</CustomField>