force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Walking__c.field-meta.xml
<CustomField>
    <fullName>Walking__c</fullName>
    <label>Walking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>